--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   color: #ffffff;
+  font-family: "Montserrat", sans-serif;
 }
 
+h1 {
+  font-weight: 400;
+}
+span {
+  font-size: 20px;
+}
 .img-background {
   position: absolute;
   width: 100%;
@@ -41,4 +50,27 @@
   position: absolute;
   bottom: 0;
   padding: 0 285px;
+}
+
+.temperature {
+  display: flex;
+  flex-direction: column;
+
+  width: 390px;
+}
+
+.temperature-celcius {
+  display: flex;
+  gap: 16px;
+}
+
+.temperature-value {
+  font-size: 130px;
+  font-weight: 600;
+}
+
+.temperature-type {
+  font-size: 60px;
+  font-weight: 200;
+  padding-top: 16px;
 }
