feat:created variant of color input

--- a/src/components/CardError/CardError.css
+++ b/src/components/CardError/CardError.css
@@ -1,11 +1,10 @@
 .card-error {
-  background-color: red;
+  background-color: rgb(252, 86, 86);
   padding: 10px;
   border-radius: 10px;
   display: inline-block;
 }
 
-.card-error h2 {
-  display: inline;
+.card-error small {
   color: white;
 }
