--- a/src/components/SearchCard/SearchCard.css
+++ b/src/components/SearchCard/SearchCard.css
@@ -3,11 +3,20 @@
   width: 100%;
   height: 100vh;
   background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  gap: 30px;
 }
 .search-text {
   color: white;
+  margin-top: 100px;
+  text-align: center;
+  max-width: 470px;
 }
 
-.search-img {
-  width: 700px;
+.search-card img {
+  width: clamp(15.625rem, 9.094rem + 27.864vw, 43.75rem);
+  height: clamp(15.625rem, 11.997rem + 15.48vw, 31.25rem);
 }
