--- a/src/components/CardError/CardError.css
+++ b/src/components/CardError/CardError.css
@@ -1,10 +1,17 @@
 .card-error {
-  background-color: rgb(252, 86, 86);
-  padding: 10px;
-  border-radius: 10px;
-  display: inline-block;
+  position: absolute;
+  z-index: 2;
+  top: 100px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 .card-error small {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(252, 86, 86);
+  margin: 0 20px;
   color: white;
 }
