--- a/src/components/SearchCard/SearchCard.css
+++ b/src/components/SearchCard/SearchCard.css
@@ -11,9 +11,10 @@
 }
 .search-text {
   color: white;
-  margin-top: 100px;
+
   text-align: center;
   max-width: 470px;
+  margin: 100px 20px 0;
 }
 
 .search-card img {
