--- a/src/components/WeatherInput/Input.css
+++ b/src/components/WeatherInput/Input.css
@@ -52,3 +52,10 @@
   right: 15px;
   fill: black;
 }
+
+@media screen and (min-width: 700px) {
+  .search {
+    width: 350px;
+    height: 35px;
+  }
+}
